--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,12 @@ jobs:
         go-version: 1.19
 
     - name: Build Client
-      run: cd client && go build -v ./...
+      run: go build -v ./...
+      working-directory: client
 
     - name: Build Server
-      run: cd server && go build -v ./...
+      run: go build -v ./...
+      working-directory: server
 
     - name: Test
       run: go test -v ./...
