--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Install xorg-dev
+      run: sudo apt-get install -y xorg-dev
+  
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
