--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,11 +42,13 @@ jobs:
       
     - name: Create a temporary artifact downloads folder
       run: mkdir downloads
+      working-directory: wtf-main
 
     - name: Add artifacts to publish to the temp folder
+      working-directory: wtf-main
       run: |
-        cp wtf-main/client/client ./downloads/ubuntu-client
-        cp wtf-main/server/server ./downloads/ubuntu-server
+        cp client/client ./downloads/ubuntu-client
+        cp server/server ./downloads/ubuntu-server
 
     - name: Step 3 - Use the Upload Artifact GitHub Action
       uses: actions/upload-artifact@v2
