--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,33 +25,27 @@ jobs:
         go-version: 1.19
 
     - name: Test Client
-      run: go test -v ./...
       working-directory: wtf-main/client
+      run: go test -v ./...
 
     - name: Build Client
-      run: go build -v ./...
       working-directory: wtf-main/client
+      run: go build -v ./...
 
     - name: Test Server
-      run: go test -v ./...
       working-directory: wtf-main/server
+      run: go test -v ./...
 
     - name: Build Server
-      run: go build -v ./...
       working-directory: wtf-main/server
+      run: go build -v ./...
       
     - name: Create a temporary artifact downloads folder
+      working-directory: wtf-main
       run: mkdir downloads
-      working-directory: wtf-main
 
-    - name: Add artifacts to publish to the temp folder
-      working-directory: wtf-main
-      run: |
-        cp client/client ./downloads/ubuntu-client
-        cp server/server ./downloads/ubuntu-server
-
-    - name: Step 3 - Use the Upload Artifact GitHub Action
-      uses: actions/upload-artifact@v2
+    - name: Upload Ubuntu Client Artefact
+      uses: actions/upload-artifact@v3.1.2
       with: 
-        name: assets-for-download
-        path: downloads
+        name: ubuntu-client
+        path: wtf-main/server/server
