--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,10 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: Test Shared
+      working-directory: wtf-main/shared
+      run: go test -v ./...
+
     - name: Test Client
       working-directory: wtf-main/client
       run: go test -v ./...
@@ -32,13 +36,13 @@ jobs:
       working-directory: wtf-main/client
       run: go build -v ./...
 
-    - name: Test Server
-      working-directory: wtf-main/server
-      run: go test -v ./...
+#    - name: Test Server
+#      working-directory: wtf-main/server
+#      run: go test -v ./...
 
-    - name: Build Server
-      working-directory: wtf-main/server
-      run: go build -v ./...
+#    - name: Build Server
+#      working-directory: wtf-main/server
+#      run: go build -v ./...
       
     - name: Upload Ubuntu Client Artefact
       uses: actions/upload-artifact@v3.1.2
@@ -46,8 +50,8 @@ jobs:
         name: ubuntu-client
         path: wtf-main/client/client
 
-    - name: Upload Ubuntu Server Artefact
-      uses: actions/upload-artifact@v3.1.2
-      with: 
-        name: ubuntu-server
-        path: wtf-main/server/server
+#    - name: Upload Ubuntu Server Artefact
+#      uses: actions/upload-artifact@v3.1.2
+#      with: 
+#        name: ubuntu-server
+#        path: wtf-main/server/server
