--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,8 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
+  build-ubuntu:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -36,13 +35,13 @@ jobs:
       working-directory: wtf-main/client
       run: go build -v ./...
 
-#    - name: Test Server
-#      working-directory: wtf-main/server
-#      run: go test -v ./...
+    - name: Test Server
+      working-directory: wtf-main/server
+      run: go test -v ./...
 
-#    - name: Build Server
-#      working-directory: wtf-main/server
-#      run: go build -v ./...
+    - name: Build Server
+      working-directory: wtf-main/server
+      run: go build -v ./...
       
     - name: Upload Ubuntu Client Artefact
       uses: actions/upload-artifact@v3.1.2
@@ -50,8 +49,30 @@ jobs:
         name: ubuntu-client
         path: wtf-main/client/client
 
-#    - name: Upload Ubuntu Server Artefact
-#      uses: actions/upload-artifact@v3.1.2
-#      with: 
-#        name: ubuntu-server
-#        path: wtf-main/server/server
+    - name: Upload Ubuntu Server Artefact
+      uses: actions/upload-artifact@v3.1.2
+      with: 
+        name: ubuntu-server
+        path: wtf-main/server/server
+
+
+  build-windows-client:
+    runs-on: windows
+
+    steps:
+    - uses: actions/checkout@v3
+  
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.19
+
+    - name: Build Client
+      working-directory: wtf-main/client
+      run: go build -v ./...
+      
+    - name: Upload Windows Client Artefact
+      uses: actions/upload-artifact@v3.1.2
+      with: 
+        name: wtf-client-win
+        path: wtf-main/client/client
