--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -57,29 +57,6 @@ jobs:
           name: windows-client
           path: wtf-main/client/client.exe
 
-  build-linux-server:
-    name: Build & Upload Linux Server
-    needs: tests
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
-    - name: Install dependencies
-      shell: bash
-      run: sudo apt-get update && sudo apt-get -y install libgl1-mesa-dev xorg-dev libasound2-dev
-    - name: Build Linux server
-      working-directory: wtf-main/server
-      run: go build -v ./...
-
-    - name: Upload Linux Server Artefact
-      uses: actions/upload-artifact@v3.1.2
-      with: 
-        name: linux-server
-        path: wtf-main/server/server
-
   build-linux-client:
     name: Build Linux Client
     needs: tests
@@ -102,6 +79,48 @@ jobs:
           name: ubuntu-client
           path: wtf-main/client/client
 
+  build-mac-client:
+    name: Build MacOS Client binary
+    needs: tests
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+      - name: Build Mac Client
+        shell: bash
+        working-directory: wtf-main/client
+        run: go build
+      - name: Upload Mac Bundle
+        uses: actions/upload-artifact@v3
+        with:
+          name: mac-client
+          path: wtf-main/client/client
+
+  build-linux-server:
+    name: Build & Upload Linux Server
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+      - name: Install dependencies
+        shell: bash
+        run: sudo apt-get update && sudo apt-get -y install libgl1-mesa-dev xorg-dev libasound2-dev
+      - name: Build Linux server
+        working-directory: wtf-main/server
+        run: go build -v ./...
+
+      - name: Upload Linux Server Artefact
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: linux-server
+          path: wtf-main/server/server
 
 #  build-windows-client:
 #    runs-on: windows
