--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -126,14 +126,13 @@ jobs:
           name: linux-server
           path: wtf-main/server/server
 
-      - uses: actions/checkout@v0.1.4
       - name: Upload to Dev Server
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
+          host: ${{ secrets.DEV_HOST }}
+          username: ${{ secrets.DEV_USERNAME }}
+          password: ${{ secrets.DEV_PASSWORD }}
+          port: ${{ secrets.DEV_PORT }}
           source: "wtf-main/server/server"
           target: ~/wtf-dev-server/
 
