--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -126,6 +126,7 @@ jobs:
           name: linux-server
           path: wtf-main/server/server
 
+      # https://github.com/appleboy/scp-action
       - name: Upload to Dev Server
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -133,8 +134,9 @@ jobs:
           username: ${{ secrets.DEV_USERNAME }}
           password: ${{ secrets.DEV_PASSWORD }}
           port: ${{ secrets.DEV_PORT }}
-          source: "wtf-main/server/server"
+          source: "wtf-main/server/server,wtf-main/server/motif.txt"
           target: ~/wtf-dev-server/
+          strip_components: 2
 
 #  build-windows-client:
 #    runs-on: windows
