--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -62,6 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/download-artifact@v3
         with:
           name: windows-client
@@ -74,7 +75,7 @@ jobs:
         # https://github.com/marketplace/actions/itch-io-upload
         uses: robpc/itchio-upload-action@v1
         with:
-          path: windows-client
+          path: client.exe
           project: ${{ env.itchio_project }}
           channel: ${{ env.itchio_channel }}
           version: ${{ env.version }}
