--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,6 @@ on: [push]
 
 env:
   itchio_project: Hanserfaust/wtf
-  itchio_channel: windows
 
 jobs:
 
@@ -77,7 +76,32 @@ jobs:
         with:
           path: client.exe
           project: ${{ env.itchio_project }}
-          channel: ${{ env.itchio_channel }}
+          channel: windows
+          version: ${{ env.version }}
+          api-key: ${{ secrets.ITCHIO_API_KEY }}
+
+  mac-client-itchio-upload:
+    name: Upload to Itch.io
+    needs: build-mac-client
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: mac-client
+      - name: Display structure of downloaded files
+        run: ls -R
+      - name: Set Version
+        run: |
+          echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      - name: Upload to itch.io project
+        # https://github.com/marketplace/actions/itch-io-upload
+        uses: robpc/itchio-upload-action@v1
+        with:
+          path: client
+          project: ${{ env.itchio_project }}
+          channel: mac
           version: ${{ env.version }}
           api-key: ${{ secrets.ITCHIO_API_KEY }}
 
