Support for build-time setting of host, port and protocol.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -187,7 +187,8 @@ jobs:
       - name: Build
         shell: bash
         working-directory: wtf-main/client
-        run: ./build_wasm.sh
+        # Connect to 888 for dev builds
+        run: GOOS=js GOARCH=wasm go build -ldflags="-X main.WsPort=888 -X main.WTFHost=wtf-dev-server.bitknife.se -X main.Protocol=wss" -v -ldflags "-w -s" -o ../wasm/main.wasm
       - name: Upload Web build
         uses: actions/upload-artifact@v3
         with:
