--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,169 +10,169 @@ env:
 
 jobs:
 
-  tests:
-    name: Run tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install xorg-dev
-        run: sudo apt-get install -y xorg-dev
+#  tests:
+#    name: Run tests
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Install xorg-dev
+#        run: sudo apt-get install -y xorg-dev
+#
+#      - name: Set up Go
+#        uses: actions/setup-go@v3
+#        with:
+#          go-version: 1.19
+#
+#      - name: Test Shared
+#        working-directory: wtf-main/lib/shared
+#        run: go test -v
+#
+#      - name: Test Client
+#        working-directory: wtf-main/lib/client
+#        run: go test -v
+#
+#      - name: Test Server
+#        working-directory: wtf-main/server
+#        run: go test -v
 
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-
-      - name: Test Shared
-        working-directory: wtf-main/shared
-        run: go test -v
-
-      - name: Test Client
-        working-directory: wtf-main/client
-        run: go test -v
-
-      - name: Test Server
-        working-directory: wtf-main/server
-        run: go test -v
-
-  build-win-client:
-    name: Windows Client [Build]
-    needs: tests
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-      - name: Build Windows exe
-        working-directory: wtf-main/client
-        shell: bash
-        run: go build -ldflags="-X main.Commit=$(git rev-parse HEAD)"
-      - name: Upload Windows exe
-        uses: actions/upload-artifact@v3
-        with:
-          path: wtf-main/client/client.exe
-          name: windows-client
-
-  win-client-itchio-upload:
-    name: Upload Windows client to Itch.io
-    needs: build-win-client
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: windows-client
-      - name: Display structure of downloaded files
-        run: ls -R
-      - name: Set Version
-        run: |
-          echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-      - name: Upload to itch.io project
-        # https://github.com/marketplace/actions/itch-io-upload
-        uses: robpc/itchio-upload-action@v1
-        with:
-          path: client.exe
-          project: ${{ env.itchio_project }}
-          channel: windows
-          version: ${{ env.version }}
-          api-key: ${{ secrets.ITCHIO_API_KEY }}
-
-  build-linux-client:
-    name: Build Linux Client
-    needs: tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-      - name: Install dependencies
-        shell: bash
-        run: sudo apt-get update && sudo apt-get -y install libgl1-mesa-dev xorg-dev libasound2-dev
-      - name: Build Linux Client
-        working-directory: wtf-main/client
-        run: go build -v -ldflags="-X main.Commit=$(git rev-parse HEAD)"
-      - name: Upload Ubuntu Client Artefact
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: linux-client
-          path: wtf-main/client/client
-
-  linux-client-itchio-upload:
-    name: Upload Linux client to Itch.io
-    needs: build-linux-client
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: linux-client
-      - name: Display structure of downloaded files
-        run: ls -R
-      - name: Set Version
-        run: |
-          echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-      - name: Upload to itch.io project
-        # https://github.com/marketplace/actions/itch-io-upload
-        uses: robpc/itchio-upload-action@v1
-        with:
-          path: client
-          project: ${{ env.itchio_project }}
-          channel: linux
-          version: ${{ env.version }}
-          api-key: ${{ secrets.ITCHIO_API_KEY }}
-
-  build-mac-client:
-    name: Build MacOS Client
-    needs: tests
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-      - name: Build Mac Client
-        shell: bash
-        working-directory: wtf-main/client
-        run: go build -ldflags="-X main.Commit=$(git rev-parse HEAD)"
-      - name: Chmod on binary
-        shell: bash
-        working-directory: wtf-main/client
-        run: chmod +x client
-      - name: Upload Mac Bundle
-        uses: actions/upload-artifact@v3
-        with:
-          name: mac-client
-          path: wtf-main/client/client
-
-  mac-client-itchio-upload:
-    name: Upload Mac client to Itch.io
-    needs: build-mac-client
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: mac-client
-      - name: Display structure of downloaded files
-        run: ls -R
-      - name: Set Version
-        run: |
-          echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-      - name: Upload to itch.io project
-        # https://github.com/marketplace/actions/itch-io-upload
-        uses: robpc/itchio-upload-action@v1
-        with:
-          path: client
-          project: ${{ env.itchio_project }}
-          channel: mac
-          version: ${{ env.version }}
-          api-key: ${{ secrets.ITCHIO_API_KEY }}
+#  build-win-client:
+#    name: Windows Client [Build]
+#    needs: tests
+#    runs-on: windows-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up Go
+#        uses: actions/setup-go@v3
+#        with:
+#          go-version: 1.19
+#      - name: Build Windows exe
+#        working-directory: wtf-main/client
+#        shell: bash
+#        run: go build -ldflags="-X main.Commit=$(git rev-parse HEAD)"
+#      - name: Upload Windows exe
+#        uses: actions/upload-artifact@v3
+#        with:
+#          path: wtf-main/client/client.exe
+#          name: windows-client
+#
+#  win-client-itchio-upload:
+#    name: Upload Windows client to Itch.io
+#    needs: build-win-client
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/download-artifact@v3
+#        with:
+#          name: windows-client
+#      - name: Display structure of downloaded files
+#        run: ls -R
+#      - name: Set Version
+#        run: |
+#          echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+#      - name: Upload to itch.io project
+#        # https://github.com/marketplace/actions/itch-io-upload
+#        uses: robpc/itchio-upload-action@v1
+#        with:
+#          path: client.exe
+#          project: ${{ env.itchio_project }}
+#          channel: windows
+#          version: ${{ env.version }}
+#          api-key: ${{ secrets.ITCHIO_API_KEY }}
+#
+#  build-linux-client:
+#    name: Build Linux Client
+#    needs: tests
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up Go
+#        uses: actions/setup-go@v3
+#        with:
+#          go-version: 1.19
+#      - name: Install dependencies
+#        shell: bash
+#        run: sudo apt-get update && sudo apt-get -y install libgl1-mesa-dev xorg-dev libasound2-dev
+#      - name: Build Linux Client
+#        working-directory: wtf-main/client
+#        run: go build -v -ldflags="-X main.Commit=$(git rev-parse HEAD)"
+#      - name: Upload Ubuntu Client Artefact
+#        uses: actions/upload-artifact@v3.1.2
+#        with:
+#          name: linux-client
+#          path: wtf-main/client/client
+#
+#  linux-client-itchio-upload:
+#    name: Upload Linux client to Itch.io
+#    needs: build-linux-client
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/download-artifact@v3
+#        with:
+#          name: linux-client
+#      - name: Display structure of downloaded files
+#        run: ls -R
+#      - name: Set Version
+#        run: |
+#          echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+#      - name: Upload to itch.io project
+#        # https://github.com/marketplace/actions/itch-io-upload
+#        uses: robpc/itchio-upload-action@v1
+#        with:
+#          path: client
+#          project: ${{ env.itchio_project }}
+#          channel: linux
+#          version: ${{ env.version }}
+#          api-key: ${{ secrets.ITCHIO_API_KEY }}
+#
+#  build-mac-client:
+#    name: Build MacOS Client
+#    needs: tests
+#    runs-on: macos-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up Go
+#        uses: actions/setup-go@v3
+#        with:
+#          go-version: 1.19
+#      - name: Build Mac Client
+#        shell: bash
+#        working-directory: wtf-main/client
+#        run: go build -ldflags="-X main.Commit=$(git rev-parse HEAD)"
+#      - name: Chmod on binary
+#        shell: bash
+#        working-directory: wtf-main/client
+#        run: chmod +x client
+#      - name: Upload Mac Bundle
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: mac-client
+#          path: wtf-main/client/client
+#
+#  mac-client-itchio-upload:
+#    name: Upload Mac client to Itch.io
+#    needs: build-mac-client
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - uses: actions/download-artifact@v3
+#        with:
+#          name: mac-client
+#      - name: Display structure of downloaded files
+#        run: ls -R
+#      - name: Set Version
+#        run: |
+#          echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+#      - name: Upload to itch.io project
+#        # https://github.com/marketplace/actions/itch-io-upload
+#        uses: robpc/itchio-upload-action@v1
+#        with:
+#          path: client
+#          project: ${{ env.itchio_project }}
+#          channel: mac
+#          version: ${{ env.version }}
+#          api-key: ${{ secrets.ITCHIO_API_KEY }}
 
   build-wasm-client:
     name: Build WASM client
