--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -176,7 +176,7 @@ jobs:
 
   build-wasm-client:
     name: Build WASM client
-    needs: tests
+#    needs: tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
